# ic-solidity-bindgen

ic-solidity-bindgen/: Cargo.toml
ic-solidity-bindgen-macros/: Cargo.toml
ic-solidity-bindgen-macros/src/: abi_gen.rs
ic-solidity-bindgen/src/: context.rs  providers.rs  web3_provider.rs
